# ic_govmind

./: .gitignore  Cargo.toml  README.md  architecture-diagram.md  canister_ids.json  deck.md  dfx.json  package-lock.json  package.json
ethereum/: .gitignore  hardhat.config.js  package-lock.json  package.json
ethereum/contracts/: CustomToken.sol  TokenFactory.sol
ethereum/scripts/: deploy.js
scripts/: build.sh  create_base_token.sh  create_dao_token.sh  create_gov_dao.sh  deploy.sh  export_sns.sh  import_sns.sh  setup_api_key.sh  test_idempotency.sh  test_proxy.sh  test_proxy_idempotent.sh
scripts/files/: create_token.candid  create_token.json
src/ai_proposal_analyzer/: Cargo.toml  ai_proposal_analyzer.did
src/ai_proposal_analyzer/src/: lib.rs
src/evm_rpc_types/src/rpc_client/: mod.rs
src/ic_govmind_api_proxy/: .env.example  .gitignore  README.md  deploy.sh  package-lock.json  package.json  server.js
src/ic_govmind_api_proxy/test/: health.test.js
src/ic_govmind_backend/: Cargo.toml  ic_govmind_backend.did
src/ic_govmind_backend/src/: api_cycles.rs  candid_file_generator.rs  guards.rs  ic_log.rs  init.rs  lib.rs  query_api.rs  store.rs  timer.rs  types.rs  update_api.rs  utils.rs  wallet.rs
src/ic_govmind_backend/src/chain/: bitcoin.rs  ethereum.rs
src/ic_govmind_backend/src/services/: evm_abi.rs  evm_service.rs  mod.rs  token_icrc1.rs
src/ic_govmind_backend/src/signer/: ecdsa.rs  mod.rs  schnorr.rs  signing.rs
src/ic_govmind_factory/: Cargo.toml  ic_govmind_factory.did
src/ic_govmind_factory/src/: api_canister.rs  api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  guards.rs  lib.rs  store.rs  types.rs  utils.rs
src/ic_govmind_frontend/: .env.example  .env.production  .env.production.example  index.html  package-lock.json  package.json  vite.config.js
src/ic_govmind_frontend/public/: .ic-assets.json5
src/ic_govmind_frontend/public/.well-known/: ic-domains  ii-alternative-origins
src/ic_govmind_frontend/src/: App.css  App.jsx  index.scss
src/ic_govmind_frontend/src/components/: AppHeader.jsx  DaoTabs.jsx  ProposalAnalysisPanel.jsx
src/ic_govmind_frontend/src/components/tabs/: CanisterTab.jsx  CommitteesTab.jsx  DistributionTab.jsx  GovernanceTab.jsx  MembersTab.jsx  OverviewTab.jsx  ProposalsTab.jsx  TreasuryTab.jsx
src/ic_govmind_frontend/src/hooks/: backendHooks.js  daoHooks.js  useAuthClient.jsx  useMyDao.js  useProposals.js  useSnsGovernance.js  useTokenPrices.js
src/ic_govmind_frontend/src/pages/: AppEntryPage.jsx  CommitteeDashboardPage.jsx  CreateDaoPage.jsx  DaoInfoPage.jsx  HomePage.jsx  ProposalCopilotPage.jsx  ProposalListPage.jsx  ProposalsPage.jsx  SnsGovernancePage.jsx  UserDashboardPage.jsx
src/ic_govmind_frontend/src/services/: aiService.js
src/ic_govmind_frontend/src/utils/: formatters.js  units.js
src/ic_govmind_hub/: Cargo.toml  ic_govmind_hub.did
src/ic_govmind_hub/src/: api_cycles.rs  api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  guards.rs  lib.rs  pay.rs  store.rs  utils.rs
src/ic_govmind_proposal_analyzer/: Cargo.toml  ic_govmind_proposal_analyzer.did
src/ic_govmind_proposal_analyzer/src/: candid_file_generator.rs  lib.rs
src/ic_govmind_sns/: Cargo.toml  ic_govmind_sns.did
src/ic_govmind_sns/src/: lib.rs  tests.rs
src/ic_govmind_types/: Cargo.toml
src/ic_govmind_types/src/: chain.rs  constants.rs  dao.rs  error.rs  icrc.rs  lib.rs  payment.rs  user.rs
