[workspace]
members = [
    "src/ic_govmind_types",
    "src/ic_govmind_backend",
    "src/ic_govmind_factory",
    "src/ic_govmind_proposal_analyzer",
    "src/ic_govmind_sns",
    "src/evm_rpc_types",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
bytes = "1"
base64 = "0.22.1"
base58 = "0.2.0"
bs58 = "0.5.1"
bincode = "1.3"
bitcoin = "0.32.7"
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18.5"
ic-error-types = "0.2"
ciborium = "0.2.2"
ciborium-io = "0.2.2"
canlog = { version = "0.2.0", features = ["derive"] }
crc32fast = "1.4"
derive_more = "0.99.1"
ethers-core = "2.0"
bitcoin_hashes = "0.14.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
serde_cbor = "0.11.2"
structured-logger = "1"
ic-cdk-timers = "0.12.2"
ic-stable-structures = "0.6.9"
icrc-ledger-types = "0.1.10"
ic-ledger-types = "0.15.0"
ic-http-certification = { version = "2.5", features = ["serde"] }
ic-http-types = "0.1.0"
ic-certified-map = "0.4"
ic-canister-log = "0.2.0"
ic-management-canister-types = "0.3.1"
ic-secp256k1 = "0.1.0"
ic-web3-rs = { git = "https://github.com/gov-mind/ic-web3-rs" }
hex = "0.4.3"
sha2 = "0.10.2"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
hex-literal = "0.2.1"
getrandom = { version = "0.2.14", features = ["custom"] }
libsecp256k1 = { version = "0.7.1", features = ["lazy-static-context"] }
ripemd = "0.1.1"
slotmap = { version = "1.0.7", features = ["serde"] }
num-traits = "0.2"
num-rational = "0.4.2"
num-bigint = "0.4.6"
futures="0.3"
tokio = { version = "1.0", features = ["full"] }
pocket-ic = "9.0.2"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.43"
url = "2.5"
proptest = "1.6.0"