[package]
name = "ic_govmind_factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-management-canister-types = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
libsecp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }

ic-govmind-types = { path = "../ic_govmind_types", version = "0.1" }
