[package]
name = "ic_govmind_proposal_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ic-stable-structures = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-govmind-types = { path = "../ic_govmind_types", version = "0.1" }