[package]
name = "ic_govmind_sns"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
pocket-ic = { workspace = true }