[package]
name = "ic-govmind-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
ciborium = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
num-traits = { workspace = true }
evm_rpc_types = { path = "../evm_rpc_types" }

